--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     </div>
 
     <div class="image-container">
-    <img src="assets/graph.png" alt="Akash-NG Trajectory Graph">
+    <img src="graph.png" alt="Akash-NG Trajectory Graph">
   </div>
     <!--
       <div class="trajectory-chart-wrapper">
