--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Akash Missile</title>
-  <link rel="icon" href="C:\akash-missile\assets\favicon-missile.ico" type="image/x-icon">
+  <link rel="icon" href="favicon-missile.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
@@ -435,10 +435,11 @@
         At proximity (15–30 m), the proximity fuse activates, detonating the warhead and dispersing high-velocity fragments to neutralize even highly maneuverable or stealth targets.
       </p>
     </div>
-
+<!---
     <div class="image-container">
     <img src="graph.png" alt="Akash-NG Trajectory Graph">
   </div>
+    --->
     <!--
       <div class="trajectory-chart-wrapper">
     <canvas id="trajectoryChart"></canvas>
